Add wandb logging.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ scipy
 requests
 torch
 torchvision
+pytorch-lightning
+tensorboard
 six
 matplotlib
 Pillow
@@ -14,3 +16,4 @@ pytest-cov
 pandas
 psutil
 yapf
+wandb
